# ocean-data-parser

./: .gitignore  .pre-commit-config.yaml  .realeaserc.yaml  .releaserc.yaml  CHANGELOG.md  MANIFEST.in  README.md  _typos.yaml  docs-requirements.txt  makefile  mkdocs.yml  pyproject.toml  setup.py  test.md  test_empty_registry.csv  tox.ini  versions.json
.benchmarks/Darwin-CPython-3.10-64bit/: 0005_no_time_parser.json
.github/workflows/: deploy-docs.yaml  generate-documentation.yaml  python-package.yml  review_version_bump.py  run-linter.yaml  test-and-deploy-docs.yaml  test-docs.yaml  test-package.yaml  test-pytest.yaml  test-python-version.yml  test-version-bump.yaml  test-windows-install.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/development/: index.html
dev/get_started/contributions/: index.html
dev/get_started/development/: index.html
dev/get_started/how-to/: index.html
dev/get_started/installation/: index.html
dev/notebooks/amundsen_int_parser_example/: index.html
dev/notebooks/dfo_bio_odf_parser_example/: index.html
dev/notebooks/dfo_nafc_p_file_parser_example/: index.html
dev/notebooks/nmea_parser_example/: index.html
dev/notebooks/seabird_cnv_and_btl_parser_example/: index.html
dev/release-notes/: index.html
dev/scripts/hooks/: index.html
dev/scripts/test_docs_prebuild/: index.html
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/theme_override_home/: home.html
dev/theme_override_home/partials/: footer.html
dev/user_guide/: index.html
dev/user_guide/cli/: index.html
dev/user_guide/odpy/: index.html
dev/user_guide/parsers/: index.html
dev/user_guide/read/: index.html
docs/: cli.md  data-format.md  development.md  how-to.md  index.md  install.md  installation.md  read-electricblue.md  read-ios.md  read-odf.md  read-seabird.md  read-sunburst.md
docs/CLI/: compile-netcdf.md
docs/assets/: dfo-odf-vocabulary.csv  dfo-odf-vocabulary.md
docs/development/: contributions.md  installation.md
docs/get_started/: contributions.md  development.md  how-to.md  installation.md
docs/metadata/: cf.md  index.md  nerc.md  pdc.md
docs/notebooks/: amundsen_int_parser_example.ipynb  bio_odf_parsing_example.ipynb  seabird_cnv_and_btl_example.ipynb
docs/parsers/: amundsen-hook.md  index.md  nmea.md  pme.md  rbr.md  seabird-hook.md  star-oddi.md  sunburst.md
docs/parsers/dfo/: ios-header.md  ios-hook.md  odf-header.md  odf-hook.md  p-hook.md
docs/read/: amundsen.md  electricblue.md  nmea.md  onset.md  pme.md  rbr.md  star-oddi.md  van-essen-intruments.md
docs/read/dfo/: index.md  ios-header.md  odf-header.md  p-header.md
docs/scripts/: hooks.py  test_docs_prebuild.py
docs/stylesheets/: extra.css
docs/theme_override_home/: home.html
docs/theme_override_home/partials/: footer.html
docs/user_guide/: cli.md  index.md  odpy.md  read.md
docs/user_guide/cli/: odpy-convert.md  odpy-inspect-variables.md
docs/user_guide/parsers/: amundsen.md  electricblue.md  header-index.md  how-to.md  index.md  netcdf.md  nmea.md  onset.md  pme.md  rbr.md  seabird.md  star-oddi.md  sunburst.md  (+1 more)
main/: 404.html  index.html  sitemap.xml
main/development/: index.html
main/release-notes/: index.html
main/search/: search_index.json
main/stylesheets/: extra.css
main/user_guide/: index.html
notebooks/: amundsen_int_parser_example.ipynb  bio_odf_parsing_example.ipynb  dfo_bio_odf_parser_example.ipynb  dfo_nafc_p_file_parser_example.ipynb  nmea_example.ipynb  nmea_parser_example.ipynb  seabird_cnv_and_btl_example.ipynb  seabird_cnv_and_btl_parser_example.ipynb
notebooks/example/: read_dfo_nafc_p_file.ipynb  read_dfo_p_file.ipynb
ocean_data_parser/: __init__.py  batch.py  cli.py  default-batch-config.yaml  geo.py  inspect.py  metadata  read.py  sample-batch-config.yaml
ocean_data_parser/batch/: __init__.py  config.py  convert.py  default-batch-config.yaml  main.py  registry.py  registry2.py  utils.py
ocean_data_parser/compile/: __init__.py  netcdf.py
ocean_data_parser/convert/: __init__.py  oxygen.py
ocean_data_parser/metadata/: __init__.py  cf.py  nerc.py  nerc_P06_vocabulary.json  pdc.py
ocean_data_parser/parsers/: __init__.py  amundsen.py  checks.py  electricblue.py  hach.py  nmea.py  onset.py  pme.py  rbr.py  seabird.py  star_oddi.py  sunburst.py  turner.py  utils.py  van_essen_instruments.py
ocean_data_parser/process/: __init__.py  manual_qc.py  process.py
ocean_data_parser/read/: README.md  __init__.py  amundsen.py  auto.py  boomlab.py  dfo.py  electric_blue.py  electricblue.py  example_parser.py  nmea.py  onset.py  pme.py  rbr.py  seabird.py  star_oddi.py  sunburst.py  utils.py  van_essen_instruments.py
ocean_data_parser/tools/: __init__.py  postgresql.py
ocean_data_parser/vocabularies/: __init__.py  amundsen_ats_vocabulary.json  amundsen_mvp_vocabulary.json  amundsen_nmea_vocabulary.json  amundsen_other_vocabulary.json  amundsen_rosette_vocabulary.json  amundsen_tsg_vocabulary.json  amundsen_vocabulary.json  dfo_ios_vocabulary.csv  dfo_nafc_p_files_vocabulary.csv  dfo_odf_vocabulary.csv  dfo_platforms.csv  load.py  seabird_vocabulary.json
scripts/: pdc_amundsen_conversion.py
test/: 404.html  index.html  objects.inv  sitemap.xml
test/search/: search_index.json
test/stylesheets/: extra.css
test/theme_override_home/: home.html
test/user_guide/: index.html
tests/: __init__.py  batch_test.py  compile_test.py  conftest.py  development-requirements.txt  geo_test.py  metadata_test.py  netcdf_compile_test.py  package_test.py  parser_detection_test.py  parsers_test.py  run_benchmark.py  test-geo.geojson  test_batch.py  test_cli.py  test_compile_netcdf.py  test_file_registry.csv  test_file_registry.py  test_geo.py  test_manual_qc.py  test_metadata.py  test_package.py  test_parser_detection.py  test_parsers.py  test_process.py  test_read.py  test_reference_netcdf.py  test_registry2.py  test_standardize.py  test_version.py  test_vocabularies.py  utils.py
tests/batch_test_configs/: batch_convert_test_onset_csv.yaml
tests/batch_tests_files/: cab041_2023_metqa_updated.csv
(+780 files in other folders)
