[project]
name = "ocean-data-parser"
version = "0.7.0"
description = "Package used to parse different Ocean Instruments Propriatary format to an xarray dataset."
repository = "https://github.com/cioos-siooc/ocean-data-parser"
homepage = "https://cioos.ca"
documentation = "https://cioos-siooc.github.io/ocean-data-parser"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "fortranformat>=2.0.0",
    "gsw-xarray>=0.4.0",
    "loguru>=0.7.3",
    "lxml>=4.9.3",
    "netcdf4>=1.7.2",
    "numpy>=1.26.1",
    "o2conversion",
    "openpyxl>=3.1.5",
    "pynmea2>=1.19.0",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sentry-sdk[loguru]>=2.20.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xarray>=2023.9.0",
    "xmltodict>=0.14.2",
]

[project.optional-dependencies]
geo = [
    "geographiclib>=2.0",
    "shapely>=2.0.6",
]
process = [
    "ipython>=8.18.1",
    "ipywidgets>=8.1.5",
    "plotly>=5.24.1",
]
docs = [
    "material-plausible-plugin>=0.2.0",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-click>=0.8.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.5.50",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-simple-hooks>=0.1.5",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "mkdocstrings-python>=1.13.0",
]

[tool.uv]
dev-dependencies = [

    "flake8>=7.1.1",

    "ioos-qc>=2.1.0",

    "pytest>=8.3.4",

    "pytest-benchmark>=5.1.0",

    "pytest-xdist>=3.6.1",

    "ruff>=0.9.2",

    "toml>=0.10.2",

    "pre-commit>=4.1.0",
]

[tool.uv.sources]
o2conversion = { git = "https://github.com/HakaiInstitute/python-o2-conversion.git" }

[project.scripts]
odpy = "ocean_data_parser.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
  "F",   # PyFlake
  "UP",  # pyupgrade
  "E",   # pydocstyle
  "W",   # Warning
  "N",   # pep8-naming
  "PT",  # flake8-pytest
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
]
ignore = [
    "D100",  # Missing docstring in public module
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101","E501"]
"ocean_data_parser/process/*" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
